--- a/src/pages/work/story.astro
+++ b/src/pages/work/story.astro
@@ -41,7 +41,6 @@ const berlinImages: CarouselImage[] = [
 ---
 
 <Layout title="My story">
-  <h1 class="text-4xl mb-4">My story</h1>
   <div class="flex mb-4 flex-wrap my-6 justify-center">
     <p class="text-base">
       I stumbled on web development by coincidence. I was chatting with a
@@ -75,7 +74,7 @@ const berlinImages: CarouselImage[] = [
 
     <div class="my-6 shadow-xl rounded-2xl bg-base-200 p-8">
       <Carousel
-        customImgClasses="h-96 w-100 object-contain"
+        customImgClasses="h-96 w-100 object-contain mx-auto p-2"
         images={asiaImages}
       />
     </div>
@@ -105,7 +104,7 @@ const berlinImages: CarouselImage[] = [
     </p>
     <div class="my-6 shadow-xl rounded-2xl bg-base-200 p-8">
       <Carousel
-        customImgClasses="h-96 w-100 object-contain"
+        customImgClasses="h-96 w-100 object-contain mx-auto p-2"
         images={berlinImages}
       />
     </div>
