--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -240,7 +240,7 @@ const progLangId = "languages";
     }
     {
       (
-        <div class="flex flex-col p-2 my-6">
+        <div class="flex flex-col p-2 my-6 w-full mx-auto">
           <h1 id={progLangId} class="text-2xl my-12">
             {progLangHeader}
           </h1>
