this is a lot of images

--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -35,17 +35,46 @@ const topAlbumSeed: CarouselImage[] = [
   {
     url: "/albums/midnights.jpeg",
     title: "Taylor Swift - Midnights",
-    desc: "Addictive to say the least, beautiful production and vocal performance",
   },
   {
     url: "/albums/call-me.jpeg",
     title: "Tyler the Creator - Call Me If You Get Lost",
-    desc: "Tyler is braggadocious without remorse, but with near perfect delivery",
   },
   {
     url: "/albums/asphalt-meadows.webp",
     title: "Death Cab for Cutie - Asphalt Meadows",
-    desc: "A wonderful comeback, haunting lyrics and signature catchy riffs",
+  },
+  {
+    url: "/albums/4-44.png",
+    title: "Jay Z - 4:44",
+  },
+  {
+    url: "/albums/dawn-fm.jpeg",
+    title: "The Weeknd - Dawn FM",
+  },
+  {
+    url: "/albums/dawn.jpeg",
+    title: "Yebba - Dawn",
+  },
+  {
+    url: "/albums/golden-hour.webp",
+    title: "Kacey Musgraves - Golden Hour",
+  },
+  {
+    url: "/albums/heroes-villains.jpeg",
+    title: "Metro Boomin - Heroes and Villains",
+  },
+  {
+    url: "/albums/kaytramine.jpeg",
+    title: "Kaytramine - Kaytramine",
+  },
+  {
+    url: "/albums/mylo-xyloto.jpeg",
+    title: "Coldplay - Mylo Xyloto",
+  },
+  {
+    url: "/albums/sos.jpeg",
+    title: "SZA - SOS",
   },
 ].map((item) => ({ ...item, alt: item.title }));
 
