add badge for beta

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -13,6 +13,10 @@ const pages = [
     label: "Play",
   },
   {
+    href: "/chat",
+    label: "Chat",
+  },
+  {
     href: "/blog",
     label: "Blog",
   },
