--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,9 +4,10 @@ import Navigation from "../components/Navigation.astro";
 export interface Props {
   title: string;
   hideHeader?: boolean;
+  badgeText?: string;
 }
 
-const { title, hideHeader } = Astro.props;
+const { title, hideHeader, badgeText } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -27,7 +28,12 @@ const { title, hideHeader } = Astro.props;
       {
         !hideHeader && (
           <>
-            <h1 class="text-4xl mb-4">{title}</h1>
+            <div class="flex">
+              <h1 class="text-4xl mb-4">{title}</h1>
+              {badgeText && (
+                <div class="badge badge-primary badge-outline mx-2">{badgeText}</div>
+              )}
+            </div>
             <div class="divider" />
           </>
         )
