--- a/src/pages/chat/index.astro
+++ b/src/pages/chat/index.astro
@@ -19,8 +19,24 @@ import { Chat } from "../../components/Chat";
     <div class="collapse-title text-xl font-medium">How does this work?</div>
     <div class="collapse-content">
       <p>
-        I'm using OpenAI embeddings and LLMs alongside a vector database from
-        Pinecone. The backend is a lightweight Cloudflare Worker.
+        I'm using <a
+          class="badge badge-info"
+          href="https://openai.com"
+          target="_blank">OpenAI</a
+        > embeddings and LLMs alongside a vector database from <a
+          class="badge badge-info"
+          href="https://www.pinecone.io/"
+          target="_blank">Pinecone</a
+        >. The backend is a lightweight <a
+          class="badge badge-info"
+          href="https://workers.cloudflare.com/"
+          target="_blank">Cloudflare Worker.</a
+        >
+        Additional shout out to <a
+          class="badge badge-info"
+          href="https://js.langchain.com/docs/get_started/introduction"
+          target="_blank">Langchain</a
+        > for making all of this relatively easy.
       </p>
     </div>
   </div>
