--- a/src/pages/chat/index.astro
+++ b/src/pages/chat/index.astro
@@ -6,8 +6,8 @@ import { Chat } from "../../components/Chat";
 <Layout title="Chat with AI" badgeText="Beta">
   <p class="text-base mb-4">
     You can ask an AI questions about this website and a few affiliated pages.
-    Please beware that this is quite experimental and the performance and
-    stability is still being tweaked.
+    Please beware that this is quite experimental and the performance, stability
+    and reliability are still being worked on.
   </p>
   <Chat client:only="react" />
   <div
@@ -30,13 +30,14 @@ import { Chat } from "../../components/Chat";
         >. The backend is a lightweight <a
           class="badge badge-info"
           href="https://workers.cloudflare.com/"
-          target="_blank">Cloudflare Worker.</a
-        >
-        Additional shout out to <a
+          target="_blank">Cloudflare Worker</a
+        >. Additional shout out to <a
           class="badge badge-info"
           href="https://js.langchain.com/docs/get_started/introduction"
           target="_blank">Langchain</a
-        > for making all of this relatively easy.
+        > for making all of this relatively easy. Additional details will be posted
+        on my <a class="badge badge-info" href="/blog">Blog</a> once I get around
+        to it.
       </p>
     </div>
   </div>
