link the homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,10 @@ import Layout from "../layouts/Layout.astro";
             >thoughts</a
           >.
         </p>
+        <p class="py-2">
+          Check out my new <a class="badge badge-info" href={"/chat"}>chatbot</a
+          > to ask an AI questions about this website.
+        </p>
       </div>
       <div class="divider lg:divider-horizontal"></div>
       <img src="/tanzim.jpg" class="max-w-xs rounded-lg shadow-2xl" />
