--- a/src/components/UnderConstruction.astro
+++ b/src/components/UnderConstruction.astro
@@ -3,7 +3,7 @@ const { msg } = Astro.props;
 ---
 
 <div class="alert alert-warning shadow-lg">
-  <div>
+  <div class="flex">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       class="stroke-current flex-shrink-0 h-6 w-6"
@@ -16,6 +16,6 @@ const { msg } = Astro.props;
         d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"
       ></path></svg
     >
-    <span>{msg ?? "Under construction ..."}</span>
+    <span class="mx-2 text-base">{msg ?? "Under construction ..."}</span>
   </div>
 </div>
