--- a/src/layouts/ResumeLayout.astro
+++ b/src/layouts/ResumeLayout.astro
@@ -26,7 +26,7 @@ export interface Props {
           <img class="w-6 h-6" src="/icons/download.svg" />
         </button>
       </a>
-      <article class="prose prose-sm">
+      <article class="prose prose-sm m-2 md:m-0">
         <slot />
       </article>
     </div>
