add resource checkout

--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -108,6 +108,19 @@ const tiles: Tile[] = [
   },
   {
     company: "",
+    title: "Resource checkout tool",
+    desc: "Manage sharing resources with a team",
+    imageSrc: "/work/resource-checkout.png",
+    links: [
+      "https://resource-checkout-v3.vercel.app/",
+      "https://github.com/mtanzim/resource-checkout-v3",
+    ],
+    linkTitles: ["App", "Code"],
+
+    type: "side",
+  },
+  {
+    company: "",
     title: "Spotify listening habits",
     desc: "See what you've been listening to",
     imageSrc: "/work/spotify-side.png",
