update resume text

--- a/src/layouts/ResumeLayout.astro
+++ b/src/layouts/ResumeLayout.astro
@@ -20,7 +20,7 @@ export interface Props {
   </head>
   <body>
     <Navigation />
-    <div class="container mx-8 md:mx-auto pb-24">
+    <div class="container mx-8 md:mx-44 pb-24">
       <a href="/work/resume.pdf" download>
         <button class="btn btn-info my-4">
           <img class="w-6 h-6" src="/icons/download.svg" />
