--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 ---
 
 <footer
-  class="footer mt-36 items-center p-4 bg-neutral text-neutral-content fixed bottom-0"
+  class="footer mt-36 items-center p-4 text-neutral-content fixed bottom-0"
 >
   <div class="items-center grid-flow-col">
     <a class="mx-2" href="mailto:mtanzim@gmail.com">
