--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -40,5 +40,12 @@ const pages = [
         ))
       }
     </ul>
+    <button
+      class="btn btn-outline btn-xs mx-4"
+      data-toggle-theme="dracula,light"
+      data-act-class="ACTIVECLASS"
+    >
+      Night/Day
+    </button>
   </div>
 </div>
