--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -45,7 +45,7 @@ const pages = [
       data-toggle-theme="dracula,light"
       data-act-class="ACTIVECLASS"
     >
-      Night/Day
+      day n' night
     </button>
   </div>
 </div>
