update night mode toggle button

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -41,7 +41,7 @@ const pages = [
       }
     </ul>
     <button
-      class="btn btn-outline btn-xs mx-4"
+      class="btn btn-accent btn-outline btn-xs mx-4"
       data-toggle-theme="dracula,light"
       data-act-class="ACTIVECLASS"
     >
