add dark mode toggle (#34)
* add dark mode toggle

* add button

* update night mode toggle button

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -40,5 +40,12 @@ const pages = [
         ))
       }
     </ul>
+    <button
+      class="btn btn-accent btn-outline btn-xs mx-4"
+      data-toggle-theme="dracula,light"
+      data-act-class="ACTIVECLASS"
+    >
+      day n' night
+    </button>
   </div>
 </div>
