--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,7 @@
 ---
 ---
 
-<footer
-  class="footer mt-36 items-center p-4 text-neutral-content fixed bottom-0"
->
+<footer class="footer mt-36 items-center p-2 fixed bottom-0 bg-accent">
   <div class="items-center grid-flow-col">
     <a class="mx-2" href="mailto:mtanzim@gmail.com">
       <img class="w-6 h-6" src="/icons/mail.svg" />
