--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -162,12 +162,11 @@ const topTravelImages = shuffle(travelImages.slice()).slice(0, 5);
       it's easy to collect data on yourself with them! For example, following is
       a glimpse of my affinity towards musical genres from the last few years:
     </p>
-    <div class="my-6 h-1/2 max-w-full shadow-xl rounded-2xl bg-base-200 p-8">
+    <div class="my-6 shadow-xl rounded-2xl bg-base-200 p-8">
       <Genres data={json as SpotifyArtists} client:only />
     </div>
-
-    This is based on my data on Spotify and you can generate a similar one
-    through my <a
+    This is based on my data on Spotify and you can generate a similar one through
+    my <a
       class="badge badge-secondary"
       target="_blank"
       href={"https://spotify-personal-ybmvkz22xq-uc.a.run.app/"}>web app</a
