--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,21 +22,17 @@ const { title, hideHeader, badgeText } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <script is:inline>
-      // ☝️ This script prevent the FART effect.
       if (localStorage.getItem("theme") === null) {
-        document.documentElement.setAttribute("data-theme", "light");
+        document.documentElement.setAttribute("data-theme", "dracula");
       } else
         document.documentElement.setAttribute(
           "data-theme",
           localStorage.getItem("theme")
         );
-      // "theme" LocalStorage value is set by the package to remember user preference.
-      // The value is checked and applyed before rendering anything.
     </script>
     <script>
       import { themeChange } from "theme-change";
       themeChange();
-      // 👆 you could import the CDN directly instead of these two lines
     </script>
   </head>
   <body>
