images are tough

--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -170,11 +170,14 @@ const topTravelImages = shuffle(travelImages.slice()).slice(0, 5);
       class="badge badge-secondary"
       target="_blank"
       href={"https://spotify-personal-ybmvkz22xq-uc.a.run.app/"}>web app</a
-    >.
+    >
     <h1 id="travel" class="text-2xl my-6">Travel</h1>
     <p class="text-base mt-6">
       I thoroughly enjoy travel, and by consequence: photography. Following are
-      a few of my favourite photos from recent trips.
+      a few of my favourite photos from recent trips. <a
+        class="badge badge-info"
+        href="/play/photography/2023">Check out more</a
+      >
     </p>
     <FullCarousel sectionPrefix="travel" images={topTravelImages} />
     <h1 id="games" class="text-2xl my-6">Video games</h1>
