--- a/src/components/PhotoCard.astro
+++ b/src/components/PhotoCard.astro
@@ -1,10 +1,12 @@
 ---
-const { title, text, imgSrc, imgAlt } = Astro.props;
+import { Image } from "astro:assets";
+import PhotoWithModal from "./PhotoWithModal.astro";
+const { title, imgSrc, imgAlt } = Astro.props;
 ---
 
 <div class="card flex-initial w-64 bg-base-400 shadow-xl m-4">
   <figure>
-    <img class="object-contain" src={imgSrc} alt={imgAlt} />
+    <Image class="object-contain" src={imgSrc} alt={imgAlt} />
   </figure>
   <div class="card-body">
     <h2 class="card-title">{title}</h2>
